ghc-4335c07/testsuite/tests/parser/should_compile/read032.hs
module ShouldCompile where

-- !!! Record declarations with zero fields are allowed
data Foo = Foo{}
