ghc-4335c07/testsuite/tests/parser/should_fail/T3811b.hs

module T3811b where

data Foo a = !B
